Add post reservation method
